--- a/package.json
+++ b/package.json
@@ -12,12 +12,21 @@
   "devDependencies": {
     "@types/chai": "^4.2.19",
     "@types/mocha": "^8.2.2",
+    "assert": "^2.0.0",
     "chai": "^4.3.4",
     "mocha": "^9.0.1",
     "ts-node": "^10.0.0",
+    "tslint": "^6.1.3",
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "he": "^1.2.0"
+  },
+  "scripts": {
+    "compile": "tsc --declaration",
+    "lint": "tslint --project tsconfig.json",
+    "prepublish": "npm run compile",
+    "test": "mocha"
   }
 }
