--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es2015",
+    "target": "es6",
     "declaration": true,
     "outDir": "./dist"
   },
-  "include": ["src/**/*", "test/**/*.ts"]
+  "include": ["src/**/*", "test/**/*"]
 }
