--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "mocha": "^9.0.1",
     "ts-node": "^10.0.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "dotenv": "^10.0.0",
+    "@types/node": "^15.12.5"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "he": "^1.2.0"
+    "axios": "^0.21.1"
   },
   "scripts": {
     "compile": "tsc --declaration",
