--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
   "devDependencies": {
     "@types/chai": "^4.2.19",
     "@types/mocha": "^8.2.2",
+    "@types/node": "^15.12.5",
     "assert": "^2.0.0",
     "chai": "^4.3.4",
+    "dotenv": "^10.0.0",
     "mocha": "^9.0.1",
     "ts-node": "^10.0.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.3.5",
-    "dotenv": "^10.0.0",
-    "@types/node": "^15.12.5"
+    "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@s-libs/micro-dash": "^12.0.0",
     "axios": "^0.21.1"
   },
   "scripts": {
