--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "onpage-js",
-  "version": "1.0.25",
+  "version": "1.0.26",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": "git@github.com:onpage-dev/onpage-js.git",
@@ -25,9 +25,9 @@
     "typescript": "^4.3.5"
   },
   "scripts": {
-    "compile": "tsc --declaration",
+    "build": "tsc --declaration",
     "lint": "tslint --project tsconfig.json",
-    "prepublish": "npm run compile",
+    "prepublish": "npm run build",
     "test": "mocha"
   }
 }
