--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "axios": "^0.21.1",
     "chai": "^4.3.4",
     "dotenv": "^10.0.0",
-    "lodash": "^12.0.0",
+    "lodash": "^4",
     "mocha": "^9.0.1",
     "ts-node": "^10.0.0",
     "tslint": "^6.1.3",
@@ -28,6 +28,6 @@
     "build": "tsc --declaration",
     "lint": "tslint --project tsconfig.json",
     "prepublish": "npm run build",
-    "test": "mocha"
+    "test": "mocha --timeout 5000"
   }
 }
