--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "onpage-js",
-  "version": "1.1.9",
+  "version": "1.1.18",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": "git@github.com:onpage-dev/onpage-js.git",
@@ -15,9 +15,12 @@
     "@types/lodash": "^4.14.182",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.40",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
     "assert": "^2.0.0",
     "chai": "^4.3.4",
     "dotenv": "^16.0.1",
+    "eslint": "^8.27.0",
     "lodash": "^4.17.21",
     "mocha": "9.0.1",
     "ts-node": "^10.0.0",
@@ -28,10 +31,12 @@
     "prepublish": "yarn build",
     "build": "tsc --declaration",
     "lint": "tslint --project tsconfig.json",
-    "test": "mocha --timeout 5000"
+    "test": "mocha --timeout 5000",
+    "fix": "eslint --fix src/"
   },
   "dependencies": {
-    "axios": "^0.27.2",
+    "@types/uuid": "^8.3.4",
+    "axios": "^1.1.3",
     "mitt": "^3.0.0",
     "string-strip-html": "8.3.0",
     "uuid": "^8.3.2"
