--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "onpage-js",
-  "version": "1.1.20",
+  "version": "1.1.23",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": "git@github.com:onpage-dev/onpage-js.git",
@@ -18,7 +18,7 @@
     "@typescript-eslint/parser": "^5.43.0",
     "assert": "^2.0.0",
     "chai": "^4.3.4",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.3",
     "eslint": "^8.27.0",
     "mocha": "9.0.1",
     "ts-node": "^10.0.0",
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "@types/uuid": "^8.3.4",
-    "axios": "^1.1.3",
+    "axios": "1.2",
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
     "string-strip-html": "8.3.0",
