--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "onpage-js",
-  "version": "1.1.27",
+  "version": "1.1.31",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": "git@github.com:onpage-dev/onpage-js.git",
@@ -10,34 +10,31 @@
     "/dist"
   ],
   "devDependencies": {
-    "@types/chai": "^4.2.19",
-    "@types/expect": "^24.3.0",
-    "@types/lodash": "^4.14.182",
-    "@types/mocha": "^9.1.1",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
-    "assert": "^2.0.0",
-    "chai": "^4.3.4",
-    "dotenv": "^16.0.3",
-    "eslint": "^8.27.0",
-    "mocha": "9.0.1",
-    "ts-node": "^10.0.0",
+    "@types/chai": "^5.2.2",
+    "@types/lodash": "^4.17.17",
+    "@types/node": "^22.15.29",
+    "@typescript-eslint/eslint-plugin": "^8.33.1",
+    "@typescript-eslint/parser": "^8.33.1",
+    "assert": "^2.1.0",
+    "chai": "^5.2.0",
+    "dotenv": "^16.5.0",
+    "eslint": "^9.28.0",
+    "ts-node": "^10.9.2",
     "tslint": "^6.1.3",
-    "typescript": "^4.3.5"
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3"
   },
   "scripts": {
-    "prepublish": "yarn build",
     "build": "tsc --declaration",
     "lint": "tslint --project tsconfig.json",
-    "test": "mocha --timeout 5000",
+    "test": "tsx src/index.spec.ts",
     "fix": "eslint --fix src/"
   },
   "dependencies": {
-    "@types/uuid": "^8.3.4",
-    "axios": "1.2",
+    "axios": "^1.9.0",
     "lodash": "^4.17.21",
-    "mitt": "^3.0.0",
-    "string-strip-html": "8.3.0",
-    "uuid": "^8.3.2"
+    "mitt": "^3.0.1",
+    "string-strip-html": "^13.4.12",
+    "uuid": "^11.1.0"
   }
 }
